@@ -7,6 +7,7 @@ New features
 Enhancements
  - [web] prevent using localhost on additional IMAP accounts
  - [web] renamed buttons of alarm toast (#3945)
+ - [web] load photos of LDAP-based address books in contacts list (#3942)
 
 Bug fixes
  - [core] honor blocking wrong login attemps within time interval (#2850)
